maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    direction=1::direction
               ^